--- a/css/styles.css
+++ b/css/styles.css
@@ -131,3 +131,11 @@ ul{
     list-style-position: outside;
     list-style-image: none;
 }
+
+.img-rounded{
+  border-radius: 25px;
+  background: #73AD21;
+  padding: 20px;
+  width: 200px;
+  height: 150px;
+}
