--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ h1 {
     display: flex;
     align-items: center;
     justify-content: center;
-    background: #0000000;
+    background: #000000;
 }
 
 .txt {
